[feat] add rest password and refactor jwt parser
